--- a/style.css
+++ b/style.css
@@ -10,6 +10,33 @@ body {
     font-family: poppins;
 }
 
+/* Custom Cursor */
+.cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #E7899F;
+  /* border: 2px solid #E42F60;  */
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  mix-blend-mode: difference; 
+  transition: width 0.2s ease, height 0.2s ease, background-color 0.2s ease;
+}
+
+.cursor.active  {
+  width: 50px;
+  height: 50px;
+  background-color: #0d0d0d;
+  /* border: 2px solid #E42F60;  */
+
+
+}
+
+
 h1 {
     font-size: 4rem;
     line-height: 1;
